--- a/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
+++ b/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
@@ -79,6 +79,7 @@
     <Compile Include="Test2Fixed.vb" />
     <Compile Include="Test3.vb" />
     <Compile Include="Test4.vb" />
+    <Compile Include="Template.vb" />
     <Compile Include="Test8.vb" />
     <Compile Include="Test7.vb" />
     <Compile Include="Test6.vb" />
@@ -103,6 +104,9 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\SampelAnalyzerVB\SampelAnalyzerVB\bin\Debug\netstandard1.3\SampelAnalyzerVB.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
