--- a/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
+++ b/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
@@ -76,6 +76,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="NullConditionOperatorWithAndAlso.vb" />
+    <Compile Include="Test10.vb" />
+    <Compile Include="Test11.vb" />
     <Compile Include="Test9.vb" />
     <Compile Include="Test2Fixed.vb" />
     <Compile Include="Test3.vb" />
