Added new unit tests  'Test 10A  If Client?.DateOfBirth.HasValue = True AndAlso Client?.DateOfBirth <> Date.MinValue Then 'Test12  ' Should not be an issue as HasValue is checked first  If budgetEligibilityBO.ProcessCode.HasValue AndAlso budgetEligibilityBO.ProcessCode <> ProcessCodes.NonContinuousEligibility Then

--- a/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
+++ b/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
@@ -76,8 +76,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="NullConditionOperatorWithAndAlso.vb" />
+    <Compile Include="Test10A.vb" />
     <Compile Include="Test10.vb" />
     <Compile Include="Test11.vb" />
+    <Compile Include="Test12.vb" />
     <Compile Include="Test9.vb" />
     <Compile Include="Test2Fixed.vb" />
     <Compile Include="Test3.vb" />
