--- a/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
+++ b/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
@@ -79,6 +79,8 @@
     <Compile Include="Test10A.vb" />
     <Compile Include="Test10.vb" />
     <Compile Include="Test11.vb" />
+    <Compile Include="Test12P.vb" />
+    <Compile Include="Test12A.vb" />
     <Compile Include="Test12.vb" />
     <Compile Include="Test9.vb" />
     <Compile Include="Test2Fixed.vb" />
