Initial version of HasValue checks

--- a/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
+++ b/SampleReferenceCodeConsole/SampleReferenceCodeConsole.vbproj
@@ -83,6 +83,7 @@
     <Compile Include="Test12A.vb" />
     <Compile Include="Test12.vb" />
     <Compile Include="Test4Fixed.vb" />
+    <Compile Include="Test9A.vb" />
     <Compile Include="Test9.vb" />
     <Compile Include="Test2Fixed.vb" />
     <Compile Include="Test3.vb" />
